--- a/views/messageDetails.ejs
+++ b/views/messageDetails.ejs
@@ -21,10 +21,12 @@
         <main>
           <section class="message-card">
             <div class="details-meta">
-              <h2><%= message.user %></h2>
-              <span><%= message.added.toLocaleString() %></span>
+              <h2><%= messages[messageId].username %></h2>
+              <span
+                ><%= (messages[messageId].created_at).toLocaleString() %></span
+              >
             </div>
-            <p class="details-body"><%= message.text %></p>
+            <p class="details-body"><%= messages[messageId].messagetext %></p>
             <div class="details-footer">
               <a href="/" class="btn-secondary">← Back to all messages</a>
             </div>
